@@ -1,5 +1,5 @@
 #ifndef lint
-static const char RCSid[] = "$Id: oconv.c,v 2.20 2004/04/12 17:31:27 greg Exp $";
+static const char RCSid[] = "$Id: oconv.c,v 2.21 2005/09/23 19:04:52 greg Exp $";
 #endif
 /*
  *  oconv.c - main program for object to octree conversion.
@@ -28,7 +28,7 @@ int  objlim = 6;			/* # of objects before split */
 
 int  resolu = 16384;			/* octree resolution limit */
 
-CUBE  thescene = {EMPTY, {0.0, 0.0, 0.0}, 0.0};		/* our scene */
+CUBE  thescene = {{0.0, 0.0, 0.0}, 0.0, EMPTY};		/* our scene */
 
 char  *ofname[MAXOBJFIL+1];		/* object file names */
 int  nfiles = 0;			/* number of object files */
