@@ -1,4 +1,4 @@
-/* RCSid $Id: ambient.h,v 2.15 2005/05/31 18:01:09 greg Exp $ */
+/* RCSid $Id: ambient.h,v 2.16 2005/09/23 19:04:53 greg Exp $ */
 /*
  * Common definitions for interreflection routines.
  *
@@ -34,18 +34,18 @@ typedef struct ambtree {
 }  AMBTREE;			/* ambient octree */
 
 typedef struct {
-	short  t, p;		/* theta, phi indices */
 	COLOR  v;		/* division sum (partial) */
 	float  r;		/* 1/distance sum */
 	float  k;		/* variance for this division */
 	int  n;			/* number of subsamples */
+	short  t, p;		/* theta, phi indices */
 }  AMBSAMP;		/* ambient sample division */
 
 typedef struct {
-	COLOR  acoef;		/* division contribution coefficient */
 	FVECT  ux, uy, uz;	/* x, y and z axis directions */
-	short  nt, np;		/* number of theta and phi directions */
+	COLOR  acoef;		/* division contribution coefficient */
 	int    ns;		/* number of super-samples */
+	short  nt, np;		/* number of theta and phi directions */
 }  AMBHEMI;		/* ambient sample hemisphere */
 
 extern double  maxarad;		/* maximum ambient radius */
